--- a/aplikasi-pelatihan/src/main/resources/templates/peserta/list.html
+++ b/aplikasi-pelatihan/src/main/resources/templates/peserta/list.html
@@ -26,8 +26,8 @@ and open the template in the editor.
             </thead>
             <tbody>
                 <tr th:each="p : ${daftarPeserta}">
-                    <td th:text="${p.nama}">Endy</td>
-                    <td th:text="${p.email}">endy@artivisi.com</td>
+                    <td th:text="${p.nama}">Hendi</td>
+                    <td th:text="${p.email}">hendi@transkom.com</td>
                     <td th:text="${p.tanggalLahir}">2015-01-01</td>
                     <td>
                        <a href="form.html" th:href="@{/peserta/form(id=${p.id})}">
