#43 - Modification in everywhere

--- a/aplikasi-pelatihan/src/main/resources/templates/layout.html
+++ b/aplikasi-pelatihan/src/main/resources/templates/layout.html
@@ -20,7 +20,7 @@ and open the template in the editor.
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                     aria-expanded="false" aria-controls="navbar">
@@ -34,11 +34,11 @@ and open the template in the editor.
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a th:href="@{/peserta/list}">Peserta</a></li>
+                <li><a th:href="@{/peserta/form}">Insert Peserta</a></li>
+                <li><a th:href="@{/peserta/list}">List Peserta</a></li>
                 <li><a th:href="@{/api/materi}">Materi</a></li>
-                <li><a th:href="@{/materi}">Report</a></li>
-                <li><a th:href="@{/upload}">Upload</a></li>
-                <li><a th:href="@{/upload}">Logout</a></li>
+                <li><a th:href="@{/materi}">Report Materi</a></li>
+                <li><a th:href="@{/upload-form}">Upload</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <form class="navbar-form navbar-right" method="post" th:action="@{/logout}">
@@ -48,6 +48,40 @@ and open the template in the editor.
         </div><!--/.nav-collapse -->
     </div>
 </nav>
+
+<!--<nav class="navbar navbar-inverse">-->
+    <!--<div class="container-fluid">-->
+        <!--<div class="navbar-header">-->
+            <!--<a class="navbar-brand" href="#">Transkom</a>-->
+        <!--</div>-->
+        <!--<ul class="nav navbar-nav">-->
+            <!--<li class="active"><a href="#">Home</a></li>-->
+            <!--<li class="dropdown">-->
+                <!--<a class="dropdown-toggle" data-toggle="dropdown" href="">Peserta-->
+                    <!--<span class="caret"></span></a>-->
+                <!--<ul class="dropdown-menu">-->
+                    <!--<li><a th:href="@{/peserta/form}">Insert Peserta</a></li>-->
+                    <!--<li><a th:href="@{/peserta/list}">List Peserta</a></li>-->
+                <!--</ul>-->
+            <!--</li>-->
+            <!--<li class="dropdown">-->
+                <!--<a class="dropdown-toggle" data-toggle="dropdown" href="#">Materi-->
+                    <!--<span class="caret"></span></a>-->
+                <!--<ul class="dropdown-menu">-->
+                    <!--&lt;!&ndash;<li><a th:href="@{/api/materi/}">Insert Materi</a></li>&ndash;&gt;-->
+                    <!--<li><a th:href="@{/api/materi}">List Materi</a></li>-->
+                    <!--<li><a th:href="@{/materi}">Report Materi</a></li>-->
+                <!--</ul>-->
+            <!--</li>-->
+            <!--<li><a th:href="@{/upload}">Upload</a></li>-->
+            <!--<li><a href="#">Contact</a></li>-->
+            <!--<li><a href="#">About</a></li>-->
+            <!--<form class="navbar-form navbar-right" method="post" th:action="@{/logout}">-->
+                <!--<input type="submit" class="btn" value="Logout"/>-->
+            <!--</form>-->
+        <!--</ul>-->
+    <!--</div>-->
+<!--</nav>-->
 
 <div class="container" th:replace="${view} :: content">Disini content</div>
 <div>Disini footer</div>
