--- a/aplikasi-pelatihan/src/main/resources/templates/peserta/form.html
+++ b/aplikasi-pelatihan/src/main/resources/templates/peserta/form.html
@@ -14,7 +14,7 @@ and open the template in the editor.
         <div th:fragment="content">
         <h1>Edit Peserta</h1>
         
-        <form action="#" th:action="@{/api/peserta/}" th:object="${peserta}" method="post">
+        <form action="#" th:action="@{/peserta/form}" th:object="${peserta}" method="post" enctype="multipart/form-data">
             <input type="hidden" th:field="*{id}" />
             <table border="1">
                 
@@ -35,6 +35,11 @@ and open the template in the editor.
                         <td>Tanggal Lahir</td>
                         <td><input type="text" th:field="*{tanggalLahir}" /></td>
                         <td th:if="${#fields.hasErrors('tanggalLahir')}" th:errors="*{tanggalLahir}">Pesan error</td>
+                    </tr>
+                    <tr>
+                        <td>Foto</td>
+                        <td><input type="file" name="foto" /></td>
+                        <td>&nbsp;</td>
                     </tr>
                     
                     <tr>
