--- a/aplikasi-pelatihan/src/main/resources/templates/upload.html
+++ b/aplikasi-pelatihan/src/main/resources/templates/upload.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
+<div th:fragment="content">
 
-<h1>Spring Boot file upload example</h1>
-<h2>Email : hendisantika@gmail.com</h2>
-<h2>Twitter and telegram : @hendisantika34</h2>
+    <h1>Spring Boot file upload example</h1>
+    <h2>Email : hendisantika@gmail.com</h2>
+    <h2>Twitter and telegram : @hendisantika34</h2>
 
-<form method="POST" action="/upload" enctype="multipart/form-data">
-    <input type="file" name="file" /><br/><br/>
-    <input type="submit" value="Submit" />
-</form>
-
+    <form method="POST" action="/upload" enctype="multipart/form-data">
+        <input type="file" name="file"/><br/><br/>
+        <input type="submit" value="Submit"/>
+    </form>
+</div>
 </body>
 </html>
