--- a/aplikasi-pelatihan/src/main/resources/templates/uploadStatus.html
+++ b/aplikasi-pelatihan/src/main/resources/templates/uploadStatus.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
+<div th:fragment="content">
 
-<h1>Spring Boot - Upload Status</h1>
+    <h1>Spring Boot - Upload Status</h1>
 
-<div th:if="${message}">
-    <h2 th:text="${message}"/>
+    <div th:if="${message}">
+        <h2 th:text="${message}"/>
+    </div>
 </div>
-
 </body>
 </html>
